<resources>
    <string name="app_name"></string>
    <string name="application_name">تداوي</string>
    <string name="login">تسجيل الدخول</string>
    <string name="signup">مشترك جديد</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="enter">دخول</string>
    <string name="forget_password">نسيت كلمة المرور</string>
    <string name="chosice_membershib">من فضلك اختر نوع العضوية المناسبة لك</string>
    <string name="user"> مستخدم</string>
    <string name="company">مقدم خدمة</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="passwor_confierm">تأكيد كلمة المرور</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="country">الدولة</string>
    <string name="more_comments_illagel">غير مسموح بإضافة أكثر من تعليق</string>
    <string name="city">المدينة</string>
    <string name="next">التالي</string>
    <string name="register">تسجيل</string>
    <string name="phone_activation">تفعيل الحساب عن طريق الهاتف</string>
    <string name="send_mail">إعادة إرسال </string>
    <string name="ensure">تأكيد</string>
    <string name="activatio_code_sent">تم إرسال كود التفعيل على هذا الرقم</string>
    <string name="enter_activation_code">برجاء إدخال كود التفعيل</string>
    <string name="active">تفعيل</string>
    <string name="chosice_specialization">من فضلك قم بإختيار مجالك </string>
    <string name="lodge">منتجعات صحية</string>
    <string name="clincks">عيادات</string>
    <string name="centers">مراكز طبية</string>
    <string name="hospitals">مستشفيات</string>
    <string name="company_logo">الشعار الخاص بك</string>
    <string name="company_location">من فضلك قم بإختيار مكانك وتخصصك</string>
    <string name="type">الفئة</string>
    <string name="espcialization">التخصص</string>
    <string name="title_activity_maps">Map</string>
    <string name="step4_text2"> الموقع الإلكتروني إن وجد</string>
    <string name="enter_phones">من فضلك قم بإدخال أرقام الهاتف</string>
    <string name="enter_company_names">من فضلك قم بإدخال أسماء الشركات</string>
    <string name="enter_social">من فضلك قم بإدراج مواقع التواصل الإجتماعى</string>
    <string name="upload_liciences">تحميل رخصة مزاولة المهنة</string>
    <string name="uploade_some_photos">من فضلك قم بإدراج بعض الصور الخاصة بشركتك</string>
    <string name="the_clienc">العيادات</string>
    <string name="fill_data">من فضلك املأ جميع البيانات</string>
    <string name="invaled_mail">صيغة البريد الإلكتروني غير صحيحة</string>
    <string name="select_country">اختر البلد اولاً</string>
    <string name="password_length">كلمة اقل من 8 احرف/أرقام</string>
    <string name="password_confirmation_error_message">كلمة المرور وتأكيد كلمة المرور غير متطابقان</string>
    <string name="exist_mail_error_message">هذا البريد مستخدم من قبل</string>
    <string name="no_internet_error_message">انقطع الإتصال بالإنترنت</string>
    <string name="try_later">ًمن فضلك حاول لاحقا</string>
    <string name="exist_phone_error_message">رقم الهاتف مستخدم من قبل</string>
    <string name="km">كيلو متر</string>
    <string name="specialization">التخصص</string>
    <string name="filter_text">سوف يتم ترتيب النتائج تبعاً لإختياراتك</string>
    <string name="done">تم</string>
    <string name="reservation_success">تم تأكيد الحجز بنجاح</string>
    <string name="select_type">من فضلك اختر الفئة</string>
    <string name="morning_shift">دوام صباحي</string>
    <string name="night_shift">دوام مسائي</string>
    <string name="from">من</string>
    <string name="to">إلى</string>
    <string name="search_now">ابحث الآن</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="add_comment">اضف تعليقك الآن</string>
    <string name="terms">الشروط والأحكام</string>
    <string name="share_app">شارك التطبيق</string>
    <string name="exit">خروج</string>
    <string name="rate_app">قيٌم التطبيق</string>
    <string name="old_password">كلمة المرور القديمة</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm">تأكيد</string>
    <string name="password_changed_successfully">تم تغيير كلمة المرور بنجاح</string>
    <string name="reservation_comment">من فضلك اكتب ملاحظات علي حجز المريض</string>
    <string name="write_comment">اكتب تعليقك الاّن</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="invaled_mail_password">البريد الإلكتروني أو كلمة المرور غير صحيحة</string>
    <string name="invaled_data">بيانات خاطئة</string>
    <string name="website_url">http://dp-itc.com/en</string>
</resources>
