<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp169h"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="11dp"
    android:background="@android:color/white"
    android:layout_gravity="center">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp169h">
        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/filter_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/sp9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_country"
            android:layout_width="@dimen/dp59w"
            android:layout_height="@dimen/dp60h"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/filter_button_shape"
            android:text="@string/country"
            android:textSize="@dimen/sp11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_specialization"
            app:layout_constraintStart_toEndOf="@+id/bt_city"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <Button
            android:id="@+id/bt_city"
            android:layout_width="@dimen/dp59w"
            android:layout_height="@dimen/dp60h"
            android:layout_marginStart="@dimen/dp20w"
            android:background="@drawable/filter_button_shape"
            android:text="@string/city"
            android:textSize="@dimen/sp11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <Button
            android:id="@+id/bt_specialization"
            android:layout_width="@dimen/dp59w"
            android:layout_height="@dimen/dp60h"
            android:layout_marginEnd="8dp"
            android:background="@drawable/filter_button_shape"
            android:text="@string/specialization"
            android:textSize="@dimen/sp11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <Button
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp30h"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/text_color_sky"
            android:text="@string/search_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp12_5"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>