<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="SignupViewModel"
            type="dp.com.tadawy.viewmodel.SignupViewModel"/>
    </data>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp63h"
        android:text="@string/chosice_membershib"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp14_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/dp220w"
        android:layout_height="@dimen/dp42h"
        android:layout_marginTop="@dimen/dp55h"
        android:background="@drawable/button_shape"
        android:text="@string/user"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp22_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/dp220w"
        android:layout_height="@dimen/dp42h"
        android:background="@drawable/button_shape"
        android:layout_marginTop="@dimen/dp29h"
        android:text="@string/company"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp22_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</android.support.constraint.ConstraintLayout>
</layout>