<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="Step1ViewModel"
            type="dp.com.tadawy.viewmodel.CompanyRegisterStep1ViewModel"/>
    </data>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp41h"
        android:text="@string/chosice_specialization"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="@dimen/dp43w"
        android:layout_marginTop="@dimen/dp20h"
        android:background="@drawable/image_specialization_shape"
        android:src="@mipmap/motag3_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lodge"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="@dimen/dp14w"
        android:background="@drawable/image_specialization_shape"
        android:src="@mipmap/clincks_image"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clincks"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="8dp"
        android:background="@drawable/image_specialization_shape"
        android:src="@mipmap/hospital_image"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hospitals"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />



    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="@dimen/dp12h"
        android:background="@drawable/image_specialization_shape"
        android:src="@mipmap/center_image"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/centers"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

</android.support.constraint.ConstraintLayout>
</layout>