<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="ViewModel"
            type="dp.com.tadawy.viewmodel.SettingsViewModel"/>
    </data>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44h"
        android:layout_marginTop="@dimen/dp141h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/terms"
        android:gravity="center|start"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp14_5"
        android:layout_marginEnd="@dimen/dp18w"/>

    <View
        android:id="@+id/view16"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray_color_50opacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44h"
        android:gravity="center|start"
        android:text="@string/share_app"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp14_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view16"
        android:layout_marginEnd="@dimen/dp18w"
        android:onClick="@{ViewModel::share}"/>

    <View
        android:id="@+id/view22"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/gray_color_50opacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44h"
        android:layout_marginEnd="@dimen/dp18w"
        android:gravity="center|start"
        android:text="@string/rate_app"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp14_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view22"
        android:onClick="@{ViewModel::rateApp}"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/dp131w"
        android:layout_height="@dimen/dp30h"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dp90h"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_shape"
        android:onClick="@{ViewModel::logOut}"
        android:text="@string/exit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp12_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="تم التطوير بواسطة"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp10"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{ViewModel::dpWebsite}"
        android:src="@drawable/logoform"
        app:layout_constraintBottom_toBottomOf="@+id/textView57"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/textView57" />
</android.support.constraint.ConstraintLayout>
</layout>