<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="ViewModel"
            type="dp.com.tadawy.viewmodel.ActivationCodeViewModel"/>
    </data>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/cl_root">

    <include
        android:id="@+id/action_bar"
        layout="@layout/actionbar_layout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp28h"
        android:text="@string/activatio_code_sent"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp18_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@{ViewModel.phone}"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp18_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/enter_activation_code"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp18_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="@dimen/dp89w"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp50h"
        android:hint="ــــ   ــــ   ــــ   ــــ"
        android:text="@={ViewModel.code}"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/bt_loginactivity"
        android:layout_width="@dimen/dp220w"
        android:layout_height="@dimen/dp42h"
        android:layout_marginTop="@dimen/dp50h"
        android:background="@drawable/button_shape"
        android:text="@string/active"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp22_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        android:onClick="@{ViewModel::active}"/>
</android.support.constraint.ConstraintLayout>
</layout>