<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="ViewModel"
            type="dp.com.tadawy.viewmodel.CompanyRegisterStep1ViewModel"/>
    </data>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:id="@+id/cl_root">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp18h"
        android:src="@mipmap/action_bar_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp15w"
        android:src="@mipmap/back_arrow"
        android:onClick="@{ViewModel::back}"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <include
        android:id="@+id/counter"
        layout="@layout/company_register_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp18h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/dp297w"
        android:layout_height="@dimen/dp35h"
        android:layout_gravity="bottom"
        android:background="@drawable/button_next_company_register"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp22_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view17"
        android:onClick="@{ViewModel::next}"/>

    <View
        android:id="@+id/view17"
        android:layout_width="@dimen/dp297w"
        android:layout_height="@dimen/dp383h"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24h"
        android:text="@string/chosice_specialization"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/sp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view17" />

    <ImageView
        android:id="@+id/iv_lodge"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="@dimen/dp43w"
        android:layout_marginTop="@dimen/dp20h"
        android:background="@drawable/image_specialization_shape"
        android:src="@drawable/motag3_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:onClick="@{ViewModel::select}"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lodge"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/iv_lodge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_lodge"
        app:layout_constraintTop_toBottomOf="@+id/iv_lodge" />

    <ImageView
        android:id="@+id/iv_clinic"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="@dimen/dp14w"
        android:background="@drawable/image_specialization_shape"
        android:src="@drawable/clincks_image"
        app:layout_constraintBottom_toBottomOf="@+id/iv_lodge"
        app:layout_constraintEnd_toStartOf="@+id/iv_lodge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_lodge"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="@{ViewModel::select}"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/clincks"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/iv_clinic"
        app:layout_constraintStart_toStartOf="@+id/iv_clinic"
        app:layout_constraintTop_toBottomOf="@+id/iv_clinic" />

    <ImageView
        android:id="@+id/iv_hospital"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="8dp"
        android:background="@drawable/image_specialization_shape"
        android:src="@drawable/hospital_image"
        app:layout_constraintBottom_toBottomOf="@+id/iv_center"
        app:layout_constraintEnd_toEndOf="@+id/iv_clinic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_clinic"
        app:layout_constraintTop_toTopOf="@+id/iv_center"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="@{ViewModel::select}"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hospitals"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/iv_hospital"
        app:layout_constraintStart_toStartOf="@+id/iv_hospital"
        app:layout_constraintTop_toBottomOf="@+id/iv_hospital" />



    <ImageView
        android:id="@+id/iv_center"
        android:layout_width="@dimen/dp97w"
        android:layout_height="@dimen/dp91h"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="@dimen/dp12h"
        android:background="@drawable/image_specialization_shape"
        android:src="@drawable/center_image"
        app:layout_constraintEnd_toEndOf="@+id/iv_lodge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/iv_lodge"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:onClick="@{ViewModel::select}"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/centers"
        android:textColor="@color/text_specialization_color_"
        android:textSize="@dimen/sp16_5"
        app:layout_constraintEnd_toEndOf="@+id/iv_center"
        app:layout_constraintStart_toStartOf="@+id/iv_center"
        app:layout_constraintTop_toBottomOf="@+id/iv_center" />




</android.support.constraint.ConstraintLayout>
</layout>